:sparkles: add favicon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    
+    <link rel="shortcut icon" href="./src/assets/favicon.svg" type="image/x-icon">
+
     <title>Food Explorer</title>
   </head>
   <body>
